feat: :closed_lock_with_key: update env.dist

--- a/.env.dist
+++ b/.env.dist
@@ -1,8 +1,8 @@
 TELEGRAM_API_ID=your_api_id
 TELEGRAM_API_HASH=your_api_hash
 TELEGRAM_PHONE_NUMBER=your_phone_number
-TELEGRAM_GROUP_IDENTIFIER=@your_group_username
 
 # Optional settings for batch processing
 TELEGRAM_CHUNK_SIZE=10
 TELEGRAM_CHUNK_DELAY=60
+TELEGRAM_REQUEST_DELAY=3
